# fcitx-fbterm

./: CMakeLists.txt  INSTALL  README
scripts/: CMakeLists.txt  fcitx-fbterm-helper
src/: CMakeLists.txt  client.c  client.h  fcitx-fbterm.c  imapi.c  imapi.h  input_key.h  keycode.c  keycode.h  keymap.c  keymap.h  marshall.list
